--- a/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
+++ b/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
@@ -1344,7 +1344,7 @@
                                                 </div>
 
                                                 <div class="input-group mb-3">
-                                                    <input class="form-control currency-input" type="number" @bind="Model.SimulationStartYear" min="2023" max="2100" style="border-width: 2px; border-color: #ccc;" />
+                                                    <input class="form-control currency-input" type="number" @bind="Model.SimulationStartYear" min="2025" max="2100" style="border-width: 2px; border-color: #ccc;" />
                                                 </div>
 
                                                 <div class="small-note">Year to begin the retirement simulation</div>
@@ -1353,7 +1353,7 @@
                                     </div>
                                 </div>
 
-                                <!-- Key Dates Summary -->
+                                @* <!-- Key Dates Summary -->
                                 <div class="mt-4">
                                     <h6 class="mb-3">Key Dates in Your Retirement Journey</h6>
                                     <div class="table-responsive">
@@ -1430,7 +1430,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                </div>
+                                </div> *@
                             </div>
                         </div>
 
