--- a/FinPlan.Web/Components/Shared/RetirementProjection.razor
+++ b/FinPlan.Web/Components/Shared/RetirementProjection.razor
@@ -76,7 +76,7 @@
         // GroupKey.WithdrawalCOLBreakDown,
         // GroupKey.IncomeBreakDown,
         GroupKey.EndingBalancesBreakDown,
-        // GroupKey.TaxPaidOnIncomeBreakDown,
+         GroupKey.TaxPaidOnIncomeBreakDown,
         // GroupKey.TaxPaidTraditionalBreakDown
     };
 
